# raytracer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: items.json
assets/creatures/: goblins.json
assets/materials/: white.json
examples/spheres/: spheres.rs  spheres.scene
sample/src/: ray_tracer.cpp  ray_tracer.h  scene.hpp  utility.h
sample/src/primitives/: camera.hpp  light.hpp  material.hpp  ray.hpp  surface.hpp  surface_plane.hpp  surface_sphere.hpp  surface_triangle.hpp
src/: camera.rs  engine.rs  finish.rs  item.rs  lib.rs  light.rs  main.rs  player.rs  quest.rs  ray.rs  renderer.rs  scene.rs  types.rs
src/archive/: lib.rs  light.rs  material.rs  ray.rs  scene.rs  texture.rs  types.rs  utility.rs
src/archive/device/: device_cpu.rs  device_memory.rs  mod.rs  task.rs
src/archive/geometry/: aabb.rs  bvh.rs  mod.rs  quad.rs  sphere.rs  triangle.rs
src/archive/kernel/: monte_carlo.rs
src/archive/render/: mod.rs  tile.rs
src/archive/util/: mod.rs  util_task.rs
src/common/: bitmap.rs  mod.rs  types.rs  utility.rs
src/core/: camera.rs  canvas.rs  image.rs  light.rs  material.rs  mod.rs  ray.rs  scene.rs  shader.rs  surface.rs  tracer.rs
src/device/: device_cpu.rs
src/geometry/: mesh.rs  mod.rs  object.rs  plane.rs  quad.rs  sphere.rs  surface.rs  triangle.rs
src/kernel/: mod.rs  path_state.rs
src/particles/: particle.rs
src/sims/: consumeable.rs  mod.rs  specie.rs  world.rs
src/surfaces/: mod.rs
src/util/: util_projection.rs
