[package]
name = "raytracer"
version = "0.1.0"
authors = ["Dowon Cha"]

[features]
# default = ["serde_codegen"]
# unstable = ["serde_derive"]

[build-dependencies]
# serde_codegen = { version = "0.8", optional = true }

[dependencies]
clap = "*"
futures = "0.1"
lazy_static = "0.2"
nalgebra = "0.10.*"
# serde = "0.8"
# serde_derive = { version = "0.8", optional = true }
# serde_json = "0.8"
# gfx = "*"
rand = "0.3"
image = "*"
time = "0.1"
num = "*"
log = "*"
# threadpool="1.3.2"
error-chain="*"
